// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MainEditorLight component test set currentSceneTreeNode test change light type test change type to be direction light, should show direction light component 1`] = `
<article
  className="wonder-inspector-light"
>
  <article
    className="inspector-item"
  >
    <div
      className="item-header"
      title="light type"
    >
      Type
    </div>
    <div
      className="item-content"
    >
      <select
        onChange={[Function]}
        value="0"
      >
        <option
          value="0"
        >
          direction_light
        </option>
        <option
          value="1"
        >
          point_light
        </option>
      </select>
    </div>
  </article>
  <article
    className="wonder-direction-light"
  >
    <article
      className="color-pick"
    >
      <div
        className="item-header"
        title="light's color"
      >
        Color
      </div>
      <div
        className="item-content item-color"
      >
        <div
          className="color-hex"
          onClick={[Function]}
          style={
            Object {
              "background": "#ffffff",
            }
          }
        />
        <div
          className="color-select"
          onClick={[Function]}
        >
          <img
            src="./public/img/color.png"
          />
        </div>
      </div>
    </article>
    <article
      className="inspector-item wonder-float-input"
    >
      <div
        className="item-header component-label"
        onMouseDown={[Function]}
        onMouseMove={[Function]}
        onMouseUp={[Function]}
        title="light's intensity"
      >
        Intensity
      </div>
      <div
        className="item-content"
      >
        <input
          className="input-component float-input"
          onBlur={[Function]}
          onChange={[Function]}
          type="text"
          value="1"
        />
      </div>
    </article>
  </article>
</article>
`;

exports[`MainEditorLight component test set currentSceneTreeNode test change light type test change type to be point light, should show point light component 1`] = `
<article
  className="wonder-inspector-light"
>
  <article
    className="inspector-item"
  >
    <div
      className="item-header"
      title="light type"
    >
      Type
    </div>
    <div
      className="item-content"
    >
      <select
        onChange={[Function]}
        value="1"
      >
        <option
          value="0"
        >
          direction_light
        </option>
        <option
          value="1"
        >
          point_light
        </option>
      </select>
    </div>
  </article>
  <article
    className="wonder-point-light"
  >
    <article
      className="color-pick"
    >
      <div
        className="item-header"
        title="light's color"
      >
        Color
      </div>
      <div
        className="item-content item-color"
      >
        <div
          className="color-hex"
          onClick={[Function]}
          style={
            Object {
              "background": "#ffffff",
            }
          }
        />
        <div
          className="color-select"
          onClick={[Function]}
        >
          <img
            src="./public/img/color.png"
          />
        </div>
      </div>
    </article>
    <article
      className="inspector-item wonder-float-input"
    >
      <div
        className="item-header component-label"
        onMouseDown={[Function]}
        onMouseMove={[Function]}
        onMouseUp={[Function]}
        title="light's intensity"
      >
        Intensity
      </div>
      <div
        className="item-content"
      >
        <input
          className="input-component float-input"
          onBlur={[Function]}
          onChange={[Function]}
          type="text"
          value="1"
        />
      </div>
    </article>
    <article
      className="inspector-item wonder-float-input"
    >
      <div
        className="item-header component-label"
        onMouseDown={[Function]}
        onMouseMove={[Function]}
        onMouseUp={[Function]}
        title="relevant attributes of point light source attenuation"
      >
        Constant
      </div>
      <div
        className="item-content"
      >
        <input
          className="input-component float-input"
          onBlur={[Function]}
          onChange={[Function]}
          type="text"
          value="1"
        />
      </div>
    </article>
    <article
      className="inspector-item wonder-float-input"
    >
      <div
        className="item-header component-label"
        onMouseDown={[Function]}
        onMouseMove={[Function]}
        onMouseUp={[Function]}
        title="relevant attributes of point light source attenuation"
      >
        Linear
      </div>
      <div
        className="item-content"
      >
        <input
          className="input-component float-input"
          onBlur={[Function]}
          onChange={[Function]}
          type="text"
          value="0.07"
        />
      </div>
    </article>
    <article
      className="inspector-item wonder-float-input"
    >
      <div
        className="item-header component-label"
        onMouseDown={[Function]}
        onMouseMove={[Function]}
        onMouseUp={[Function]}
        title="relevant attributes of point light source attenuation"
      >
        Quadratic
      </div>
      <div
        className="item-content"
      >
        <input
          className="input-component float-input"
          onBlur={[Function]}
          onChange={[Function]}
          type="text"
          value="0.017"
        />
      </div>
    </article>
    <article
      className="inspector-item wonder-float-input"
    >
      <div
        className="item-header component-label"
        onMouseDown={[Function]}
        onMouseMove={[Function]}
        onMouseUp={[Function]}
        title="point light's range"
      >
        Range
      </div>
      <div
        className="item-content"
      >
        <input
          className="input-component float-input"
          onBlur={[Function]}
          onChange={[Function]}
          type="text"
          value="65"
        />
      </div>
    </article>
  </article>
</article>
`;

exports[`MainEditorLight component test set currentSceneTreeNode test change light type test the original type is direction light, should show direction light component  1`] = `
<article
  className="wonder-inspector-light"
>
  <article
    className="inspector-item"
  >
    <div
      className="item-header"
      title="light type"
    >
      Type
    </div>
    <div
      className="item-content"
    >
      <select
        onChange={[Function]}
        value="0"
      >
        <option
          value="0"
        >
          direction_light
        </option>
        <option
          value="1"
        >
          point_light
        </option>
      </select>
    </div>
  </article>
  <article
    className="wonder-direction-light"
  >
    <article
      className="color-pick"
    >
      <div
        className="item-header"
        title="light's color"
      >
        Color
      </div>
      <div
        className="item-content item-color"
      >
        <div
          className="color-hex"
          onClick={[Function]}
          style={
            Object {
              "background": "#ffffff",
            }
          }
        />
        <div
          className="color-select"
          onClick={[Function]}
        >
          <img
            src="./public/img/color.png"
          />
        </div>
      </div>
    </article>
    <article
      className="inspector-item wonder-float-input"
    >
      <div
        className="item-header component-label"
        onMouseDown={[Function]}
        onMouseMove={[Function]}
        onMouseUp={[Function]}
        title="light's intensity"
      >
        Intensity
      </div>
      <div
        className="item-content"
      >
        <input
          className="input-component float-input"
          onBlur={[Function]}
          onChange={[Function]}
          type="text"
          value="1"
        />
      </div>
    </article>
  </article>
</article>
`;
